# vlm-internals

./: .gitignore  README.md  analyze.py  evaluate.py  experiment_logs.md  extract.py  hello.py  main.py  playground.ipynb  pyproject.toml
analysis/: attention.py  attention_split.py  utils.py  visualization.py
data/: __init__.py  datasets.py
model_utils/: __init__.py  qwen.py  qwen_wrapper.py
