[project]
name = "vlm-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "easydict>=1.13",
    "ipykernel>=6.29.5",
    "pillow>=11.2.1",
    "qwen-vl-utils[decord]>=0.0.11",
    "torch==2.6",
    "transformers>=4.51.3",
    "flash-attn",
    "torchvision>=0.21.0",
    "timm>=1.0.15",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.3",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
